Fix th and td not aligning

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -727,6 +727,7 @@ input:-webkit-autofill:focus{
 // 
 
 .admin-logs{
+    margin-top: max(15px, 1vw);
     display: flex;
     width: 100%;
     height: 90vh;
@@ -741,6 +742,11 @@ input:-webkit-autofill:focus{
         // background-color: white;
         border-radius: max(7px, 1vw);
         // box-shadow: 0 0 5px $boxShadowPrimary-color;
+    }
+
+    h2{
+        font-size: 1.5rem;
+        font-weight: 600;
     }
 }
 
@@ -816,7 +822,7 @@ th{
     justify-content: flex-start;
     align-items: center;
     padding: 0 max(2px,0.4vw);
-    min-width: 150px;
+    max-width: 400px;
 }
 
 td{
